radio-button sizes and header align fixed

--- a/css/common.css
+++ b/css/common.css
@@ -111,6 +111,12 @@ ul{
 .plane-foot-content{
     border: 1px solid rgb(207, 207, 207);
     width: 100%;
-    height: 500px;
+    height: 300px;
     margin-top: 50px;
+}
+
+/* rendo più grandi i radio buttons  */
+input[type=radio] {
+    transform: scale(1.5);
+    border: 0;
 }
